# typing-speed-test

./: main.py  pyproject.toml  sentences.txt
