[tool.poetry]
name = "typing-speed"
version = "0.1.0"
description = ""
authors = ["Alen Vlahovljak <alen.vlahovljak@evolt.dev>"]
readme = "README.md"
packages = [{include = "typing_speed"}]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
